@@ -1,0 +1,43 @@
+/*
+ *
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ *
+ */
+
+package org.apache.bookkeeper.meta;
+
+import org.apache.bookkeeper.meta.LedgerManager.LedgerRangeIterator;
+import org.junit.Test;
+
+public class LedgerManagerIteratorTest extends LedgerManagerTestCase {
+    public LedgerManagerIteratorTest(Class<? extends LedgerManagerFactory> lmFactoryCls) {
+        super(lmFactoryCls);
+    }
+
+    @Test(timeout = 60000)
+    public void testIterateNoLedgers() throws Exception {
+        LedgerManager lm = getLedgerManager();
+        LedgerRangeIterator lri = lm.getLedgerRanges();
+        assertNotNull(lri);
+        if (lri.hasNext())
+            lri.next();
+
+        assertEquals(false, lri.hasNext());
+        assertEquals(false, lri.hasNext());
+    }
+}
